# mission-center

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  bench-startup.sh  bench.sh  bench_baseline.csv  bench_splice_opt.csv  meson.build  meson_options.txt
.gitlab/issue_templates/: App Detection.md  Feature Request.md  GPU Detection.md  General Bug.md  default.md
appimage/: io.missioncenter.MissionCenter.yml
data/: io.missioncenter.MissionCenter.desktop.in  io.missioncenter.MissionCenter.gschema.xml  io.missioncenter.MissionCenter.metainfo.xml.in
flatpak/: cargo-sources-magpie.json  cargo-sources.json  io.missioncenter.MissionCenter.json  magpie-cargo-config.toml
po/: LINGUAS  POTFILES  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  lt.po  missioncenter.pot  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  (+6 more)
resources/: meson.build  missioncenter.gresource.xml
resources/ui/: about_system_dialog.blp  first_run_dialog.blp  keyboard_shortcuts.blp  window.blp
resources/ui/apps_page/: page.blp
resources/ui/performance_page/: battery.blp  battery_details.blp  cpu.blp  cpu_details.blp  disk.blp  disk_details.blp  fan.blp  fan_details.blp  gpu.blp  gpu_details.blp  memory.blp  memory_details.blp  network.blp  network_details.blp  page.blp  summary_graph.blp
resources/ui/performance_page/disk_widgets/: disk_eject_failure_dialog.blp  disk_eject_failure_row.blp  disk_partition_usage_item.blp  disk_smart_data_dialog.blp  disk_smart_data_entry.blp  disk_smart_failure_dialog.blp
resources/ui/preferences/: apps_services_page.blp  general_page.blp  page.blp  performance_page.blp  units_page.blp
resources/ui/process_column_view/: column_view_frame.blp  process_action_bar.blp  process_details_dialog.blp  service_action_bar.blp  service_details_dialog.blp
resources/ui/services_page/: page.blp
resources/ui/table_view/: process_action_bar.blp  process_details_dialog.blp  service_action_bar.blp  service_details_dialog.blp  table_view.blp
resources/ui/widgets/: about_system_dialog.blp
snap/: snapcraft.yaml
src/: about_system_dialog.rs  application.rs  first_run_dialog.rs  main.rs  meson.build  window.rs
src/apps_page/: actions.rs  mod.rs
src/magpie_client/: client.rs  mod.rs
src/neo_services_page/: mod.rs
src/performance_page/: battery.rs  cpu.rs  disk.rs  disk_details.rs  fan.rs  gpu.rs  gpu_details.rs  memory.rs  mod.rs  network.rs  summary_graph.rs
src/performance_page/widgets/: eject_failure_dialog.rs  eject_failure_row.rs  graph_widget.rs  graph_widget_utils.rs  mem_composition_widget.rs  mod.rs  neo_graph_widget.rs  neo_graph_widget_utils.rs  partition_usage_item.rs  sidebar_drop_hint.rs  smart_data_dialog.rs  smart_failure_dialog.rs  smart_nvme_dialog_row.rs  smart_sata_dialog_row.rs
src/preferences/: apps_services_page.rs  general_page.rs  mod.rs  page.rs  performance_page.rs  units_page.rs
src/process_tree/: column_view_frame.rs  mod.rs  process_action_bar.rs  process_details_dialog.rs  row_model.rs  service_action_bar.rs  service_details_dialog.rs  settings.rs  util.rs
src/process_tree/columns/: cpu.rs  drive.rs  gpu.rs  gpu_memory.rs  label_cell.rs  memory.rs  mod.rs  name.rs  name_cell.rs  network.rs  pid.rs  shared_memory.rs
src/process_tree/models/: mod.rs  processes.rs
src/services_page/: actions.rs  mod.rs
src/table_view/: cached_icon.rs  mod.rs  models.rs  process_action_bar.rs  process_details_dialog.rs  row_model.rs  service_action_bar.rs  service_details_dialog.rs  settings.rs
src/table_view/columns/: cpu.rs  drive.rs  gpu.rs  gpu_memory.rs  label_cell.rs  memory.rs  mod.rs  name.rs  name_cell.rs  network.rs  pid.rs  shared_memory.rs  swap.rs
src/widgets/: about_system_dialog.rs  mod.rs  theme_selector.rs
subprojects/: blueprint-compiler.wrap
support/: build-with-gtk-libadwaita.sh  create-appimage.sh  create-snap.sh
support/patches/libadwaita/: 0001-stylesheet-common-Use-disabled-opacity-for-disabled-pictu.patch  0002-stylesheet-common-Use-opacity-for-all-disabled-gtk-images.patch  0003-style-manager-Support-Yaru-accent-colors.patch  0004-accent-color-Always-expose-and-use-yaru-accent-colors-val.patch  0005-style-Add-wartybrown-accent-support.patch  0006-adw-spinner-paintable-design-and-animation.patch
