option('flatpak', type : 'boolean', value : false, description: 'Building for Flatpak')
option('benchmark', type : 'boolean', value : false, description: 'Enable startup benchmark instrumentation (prints BENCH: timing lines to stderr)')
option('cargo_env', type : 'array', value : [], description: 'Additional environment variables that should be set when running cargo')
